# TINCGR02

./: CMakeLists.txt  README.md  index.html  main
headers/: planets.hpp  shapes.hpp
js/: app.js
shaders/: index_vertex.glsl
src/: main  main.cpp  planets.cpp  shapes.cpp
